made images link to projects, fixe some alignment issues

--- a/assets/css/main3-2.css
+++ b/assets/css/main3-2.css
@@ -144,7 +144,7 @@ button:hover, a:visited {
 .intro-section, .about-me-section, .contact-section, .projects-section, .project-container {
   width: 100%;
   margin: 0 auto;
-  padding-left: 5%
+  padding-left: 10%
   
 }
 .intro-section{
@@ -334,7 +334,7 @@ img {
   display: inline;
   }
   .projects-section-title{
-    padding: 0 10%;
+    padding: 0;
   }
   .intro-section, .about-me-section, .project-container {
     padding: 15px 10% 80px 0;
